# backend/api/openapi.yaml
@@ -33,6 +33,42 @@ paths:
               schema:
                 type: string
 
+  /authenticate/logout:
+    post:
+      description: Log out
+      responses:
+        200:
+          description: Log out successful
+          content:
+            application/json:
+              schema:
+                type: string
+        204:
+          description: Not logged in
+
+  /authenticate/refresh:
+    get:
+      description: Refresh access token
+      responses:
+        200:
+          description: Token successfully refreshed
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/SessionToken'
+        401:
+          description: Invalid user
+          content:
+            application/json:
+              schema:
+                type: string
+        403:
+          description: Forbidden
+          content:
+            application/json:
+              schema:
+                type: string
+
   /listings:
     get:
       description: GET all listings
@@ -126,10 +162,12 @@ paths:
             schema:
               $ref: '#/components/schemas/NewListing'
       security:
-        - bearerAuth: []
+        - BearerAuth: []
       responses:
         201:
           description: Listing created
+        401:
+          description: Unauthorized
         400:
           description: Invalid listing
 
@@ -198,12 +236,14 @@ paths:
             schema:
               $ref: '#/components/schemas/UpdateUser'
       security:
-        - bearerAuth: []
+        - BearerAuth: []
       responses:
         200:
           description: User updated
         400:
           description: invalid user
+        401:
+          description: Unauthorized
         404:
           description: User not found
     delete:
@@ -216,10 +256,12 @@ paths:
           schema:
             type: string
       security:
-        - bearerAuth: []
+        - BearerAuth: []
       responses:
         200:
           description: Successful
+        401:
+          description: Unauthorized
         404:
           description: User not found
         
@@ -367,3 +409,9 @@ components:
       properties:
         accessToken:
           type: string
+
+  securitySchemes:
+    BearerAuth:
+      type: http
+      scheme: bearer
+      bearerFormat: JWT
